# minimal-kernel-os

./: .gitignore  3  Cargo.toml  README.md
.cargo/: config.toml
src/: allocator.rs  ansiterm.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/sync/: mutex.rs  spin_lock.rs
src/task/: executor.rs  keybord.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
